@@ -221,7 +221,7 @@ class FLEXT_SHARE flext_obj:
 	public:
 
     	//! Creation callback
-		static void __setup__(t_classid) { flext::Setup(); }	
+		static void __setup__(t_classid) { flext::FLEXT_SETUPFUNC(); }	
 
 		/*! \brief This is a temporary holder
 			\warning don't touch it!
